# zero-keras

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  COMPLIANCE.md  KERAS_TODO.md  README.md  SEMANTIC_PLAN.md  TEST_OG_PLAN.md  TODO_PLAN.md  fake_path.keras  fix_test_layer_parity.py  pyproject.toml  requirements-test.txt  requirements.txt  score.py
.github/workflows/: ci.yml
scripts/: check_compliance.py  check_imports.py  fix_ops.py  generate_layers.py  generate_ops_stubs.py  generate_semantic_plan.py  update_badges.py
src/zero_keras/: __init__.py  activations.py  core_layers.py  initializers.py  layers.py  layers.py_patch  losses.py  metrics.py  models.py  ops.py  random.py  regularizers.py
src/zero_keras/applications/: __init__.py  convnext.py  densenet.py  efficientnet.py  efficientnet_v2.py  imagenet_utils.py  inception_resnet_v2.py  inception_v3.py  mobilenet.py  mobilenet_v2.py  mobilenet_v3.py  nasnet.py  resnet.py  resnet50.py  resnet_v2.py  vgg16.py  vgg19.py  xception.py
src/zero_keras/backend/: __init__.py
src/zero_keras/callbacks/: __init__.py  callbacks.py
src/zero_keras/config/: __init__.py
src/zero_keras/constraints/: __init__.py
src/zero_keras/datasets/: __init__.py  boston_housing.py  california_housing.py  cifar10.py  cifar100.py  fashion_mnist.py  imdb.py  mnist.py  reuters.py
src/zero_keras/distribution/: __init__.py
src/zero_keras/dtype_policies/: __init__.py
src/zero_keras/export/: __init__.py  export_api.py
tests/: conftest.py  test_activation_layers.py  test_activations.py  test_activations_coverage.py  test_applications.py  test_backend.py  test_bidirectional.py  test_bidirectional_backward.py  test_callbacks.py  test_callbacks_extra.py  test_complex_preprocessing.py  test_config.py  test_constraints.py  test_convlstm.py  test_core_layers_extra.py  test_core_layers_extra2.py  test_core_layers_extra_all.py  test_core_layers_extra_final.py  test_core_layers_extra_part10.py  test_core_layers_extra_part9.py  test_core_layers_extra_remaining.py  test_core_layers_missing_branches.py  test_core_workflows.py  test_coverage_conv_bias.py  test_coverage_remaining.py  test_dataset_utils.py  test_datasets.py  test_distribution.py  test_dtype_policies.py  test_foreign_layers.py  test_initializers.py  test_initializers_coverage.py  test_keras.py  test_layer_parity.py  test_layers.py  test_layers_branches_missing.py  test_layers_branches_missing2.py  test_layers_branches_missing_aliases.py  test_layers_extra_io.py  test_layers_missing.py  (+57 more)
(+25 files in other folders)
