[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "zero-keras"
version = "0.1.0"
description = "Zero-dependency pure Python implementation of the Keras API surface."
authors = [{ name = "Samuel Marks" }]
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
[tool.hatch.metadata]
allow-direct-references = true

dependencies = ["ml-switcheroo-compiler"]

[tool.ruff]
ignore = ['E402']
