[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "zero-keras"
version = "0.1.0"
description = "Zero-dependency pure Python implementation of the Keras API surface."
authors = [{ name = "Samuel Marks" }]
requires-python = ">=3.9"
dynamic = ["dependencies", "optional-dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
test = ["requirements-test.txt"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
per-file-ignores = {"tests/*" = ["E741", "F841"], "parse_*.py" = ["E741"]}
ignore = ['E402']

[tool.pytest.ini_options]
addopts = "--cov=src/zero_keras --cov-report=term-missing -v"
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.uv.sources]
ml-switcheroo-compiler = { path = "../ml-switcheroo-compiler", editable = true }
ml-switcheroo-ir = { path = "../ml-switcheroo-ir", editable = true }
